--- a/elmejorsouls.html
+++ b/elmejorsouls.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="DarkSouls, Elden Ring, Souls, FromSoftware, Dificil, Souls Like,el mejor souls">
     <meta name="description" content="Entra a la pagina web para descubrir cual es el mejor de todos los souls">
-    
+    <link rel="stylesheet" href="mjrsouls.css">
     <title>SoulsLike</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <a href="./origen.html">Origen y Evolución del Género</a>
             <a href="./terapia.html">Terapia?</a>
@@ -18,7 +18,7 @@
             <a href="./index.html">Inicio</a>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <section>
             <h2>¿Es Elden Ring el Mejor Soulslike?</h2>
             
@@ -58,7 +58,7 @@
             <img src="/2kHwgWj4wWDgURfg3FzHh8.jpg" alt="Dragon escupiendo fuego" height="200px" width="200px">
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <address>
             <p>&copy; 2024 Souls Enthusiasts. Todos los derechos reservados.</p>
             <p>sigenos en  <a href="https://twitter.com/soulsenthusiasts" target="_blank">Twitter</a> and <a href="https://www.instagram.com/soulsenthusiasts" target="_blank">Instagram</a>.</p>
