--- a/gameplay.html
+++ b/gameplay.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="DarkSouls, Elden Ring, Souls, FromSoftware, Dificil, Souls Like, Gameplay">
     <meta name="description" content="Gameplay sobre los juegos souls">
-    
+    <link rel="stylesheet" href="gameplay.css">
     <title>SoulsLike</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <a href="./origen.html">Origen y Evolución del Género</a>
             <a href="./terapia.html">Terapia?</a>
@@ -18,7 +18,7 @@
             <a href="./elmejorsouls.html">La Cuspide del Genero</a>
         </nav>
     </header>
-    <main>
+    <main class="main">
             <h1 class="title-container">Gameplay</h1>
             <section>
                 <h2>Características del Gameplay de un Soulslike</h2>
@@ -66,7 +66,7 @@
         
 
     </main>
-    <footer>
+    <footer class="footer">
         <address>
             <p>&copy; 2024 Souls Enthusiasts. Todos los derechos reservados.</p>
             <p>sigenos en  <a href="https://twitter.com/soulsenthusiasts" target="_blank">Twitter</a> and <a href="https://www.instagram.com/soulsenthusiasts" target="_blank">Instagram</a>.</p>
