--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="DarkSouls, Elden Ring, Souls, FromSoftware, Dificil, Souls Like">
     <meta name="description" content="Entra a la pagina web para descubrir por que los Souls son el genero mas aclamado de los videjuegos">
     <link rel="icon" href="/OIP.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="index.css">
     <title>SoulsLike</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <a href="./origen.html">Origen y Evolución del Género</a>
             <a href="./terapia.html">Terapia?</a>
@@ -19,7 +19,7 @@
             <a href="./elmejorsouls.html">La Cuspide del Genero</a>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <article>
             <h1 class="title-container">Introduccion en el genero ¿Que son los Souls?</h1>
 
@@ -47,7 +47,7 @@
         <audio controls><source src="/Voicy_i am malenia blade of miquella.mp3"></audio>
     </main>
    
-    <footer>
+    <footer class="footer">
         <address>
             <p>&copy; 2024 Souls Enthusiasts. All rights reserved.</p>
             <p>For inquiries, please contact us at <a href="mailto:info@soulsenthusiasts.com">info@soulsenthusiasts.com</a>.</p>
