--- a/origen.html
+++ b/origen.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="DarkSouls, Elden Ring, Souls, FromSoftware, Dificil, Souls Like,Origen de los souls">
     <meta name="description" content="Entra a la pagina web para descubrir el origen de los souls"> 
+    <link rel="stylesheet" href="origen.css">
     <title>SoulsLike</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <a href="./index.html">inicio</a>
             <a href="./terapia.html">Terapia?</a>
@@ -16,7 +17,7 @@
             <a href="./elmejorsouls.html">La Cuspide del Genero</a>
         </nav>
     </header>
-    <main>
+    <main class="main">
         
             <h1 class="title-container">Origen</h1>
             <section>
@@ -43,7 +44,7 @@
         
 
     </main>
-    <footer>
+    <footer class="footer">
         <address>
             <p>&copy; 2024 Souls Enthusiasts. All rights reserved.</p>
             <p>For inquiries, please contact us at <a href="mailto:info@soulsenthusiasts.com">info@soulsenthusiasts.com</a>.</p>
