--- a/terapia.html
+++ b/terapia.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="DarkSouls, Elden Ring, Souls, FromSoftware, Dificil, Souls Like,terapia">
     <meta name="description" content="Entra a la pagina web para descubrir por que los Souls son terapia">
-    
+    <link rel="stylesheet" href="terapia.css">
+    <script src="form.js"></script>
     <title>SoulsLike</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <a href="./origen.html">Origen y Evolución del Género</a>
             <a href="./index.html">Inicio</a>
@@ -18,7 +19,7 @@
             <a href="./elmejorsouls.html">La Cuspide del Genero</a>
         </nav>
     </header>
-    <main>
+    <main class="main">
 
         <section>
             <h2>Los Soulslike como Forma de Terapia</h2>
@@ -65,7 +66,7 @@
         </section>
         
     </main>
-    <footer>
+    <footer class="footer">
         <address>
             <p>&copy; 2024 Souls Enthusiasts. Todos los derechos reservados.</p>
             <p>sigenos en  <a href="https://twitter.com/soulsenthusiasts" target="_blank">Twitter</a> and <a href="https://www.instagram.com/soulsenthusiasts" target="_blank">Instagram</a>.</p>
