--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </blockquote>
                 <div class="img-container">
                     <img src="/dark-souls-3-8k-om.jpg" alt="Imagen del señor de las cenizas (un caballero inclinado con la espada clavada en el suelo)" height="400px" width="400px" style="object-fit: cover;" >
-                    <img src="/OIP.jpg" alt="Fogata"  height="400px" width="400px" style="object-fit: cover;">
+                    <img src="OIP.jpg" alt="Fogata"  height="400px" width="400px" style="object-fit: cover;">
                 </div>
             </section>
 
