--- a/elmejorsouls.html
+++ b/elmejorsouls.html
@@ -53,9 +53,9 @@
         </section>
 
         <section>
-            <img src="/elden-ring-button-03-1623460560664.jpg" alt="elden ring el videojuego" height="200px" width="200px">
-            <img src="/623c46820aa1df70128298ca.webp" alt="god slain" height="200px" width="200px">
-            <img src="/2kHwgWj4wWDgURfg3FzHh8.jpg" alt="Dragon escupiendo fuego" height="200px" width="200px">
+            <img src="elden-ring-button-03-1623460560664.jpg" alt="elden ring el videojuego" height="200px" width="200px">
+            <img src="623c46820aa1df70128298ca.webp" alt="god slain" height="200px" width="200px">
+            <img src="2kHwgWj4wWDgURfg3FzHh8.jpg" alt="Dragon escupiendo fuego" height="200px" width="200px">
         </section>
     </main>
     <footer class="footer">
