--- a/origen.html
+++ b/origen.html
@@ -33,8 +33,8 @@
                 </article>
 
                 <div style="height: 400px;">
-                    <img src="/demonsouls.jpg" alt=" Videojuego demon souls">
-                    <img src="/hidetaka-miyazaki-1570791802659_v2_4x3.jpg" alt="Creador de la saga dark souls" style="object-fit: cover;" height="200px" width="200px">                    
+                    <img src="demonsouls.jpg" alt=" Videojuego demon souls">
+                    <img src="hidetaka-miyazaki-1570791802659_v2_4x3.jpg" alt="Creador de la saga dark souls" style="object-fit: cover;" height="200px" width="200px">                    
                 </div>
 
             </section>
