--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="DarkSouls, Elden Ring, Souls, FromSoftware, Dificil, Souls Like">
     <meta name="description" content="Entra a la pagina web para descubrir por que los Souls son el genero mas aclamado de los videjuegos">
-    <link rel="icon" href="/OIP.jpg" type="image/x-icon">
+    <link rel="icon" href="OIP.jpg" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
     <title>SoulsLike</title>
 </head>
@@ -30,7 +30,7 @@
                 <cite><a href="https://www.3djuegosguias.com/rpg/que-soulslike-aqui-tienes-5-mejores-juegos-genero#:~:text=Aunque%20arriba%20ya%20hemos%20dado%20algunas%20pinceladas%2C%20la,de%20los%20objetos%20y%20los%20detalles%20del%20mundo.">Fuente</a></cite>
             </blockquote>
                 <div class="img-container">
-                    <img src="/dark-souls-3-8k-om.jpg" alt="Imagen del señor de las cenizas (un caballero inclinado con la espada clavada en el suelo)" height="400px" width="400px" style="object-fit: cover;" >
+                    <img src="dark-souls-3-8k-om.jpg" alt="Imagen del señor de las cenizas (un caballero inclinado con la espada clavada en el suelo)" height="400px" width="400px" style="object-fit: cover;" >
                     <img src="OIP.jpg" alt="Fogata"  height="400px" width="400px" style="object-fit: cover;">
                 </div>
             </section>
@@ -39,12 +39,12 @@
                 <h2 class="subtitle-container">Experencia personal con los Souls</h2>
                 <p class="content-container">la razon por la que cada vez que puedo recomiendo pasarse un souls es que para mi es ha sido y sera ese juego que sabe recogerme cuando estoy hecho pedazos en su gameplay encuentro trozitos muy pequeños de mi lo que cualquier persona con depresion ansiedad o cualquier tipo de padecimiento puede encontrar en esta obra, esa espada gritando que la empuñes a un que estes a punto de desfallecer,aun cuando estes agotado de la lucha constante en cada dia, aun cuando el enemigo es mucho mas fuerte, grande y poderoso que tu, aun cuando el problema es mas grande que tu los souls siempre encuentran la manera de decirte (tranquilo) habra momentos de paz y cualquier tunel tiene su final todo mientras nos grita lucha lucha lucha NO TE RINDAS!</p>
                 <div class="img-container">
-                    <img src="/df1gj25-9a3bd8af-a2fe-4fd2-9808-e0d1c81d6c06.jpg" alt="Alexander el guerrero mas fuerte de necrolimbo" height="400px" width="400px" style="object-fit: cover;" >
-                    <img src="/wallpapersden.com_elden-ring-4k-gaming-2022_800x1280.jpg" alt="Malenia Elden Ring"  height="400px" width="400px" style="object-fit: cover;">
+                    <img src="df1gj25-9a3bd8af-a2fe-4fd2-9808-e0d1c81d6c06.jpg" alt="Alexander el guerrero mas fuerte de necrolimbo" height="400px" width="400px" style="object-fit: cover;" >
+                    <img src="wallpapersden.com_elden-ring-4k-gaming-2022_800x1280.jpg" alt="Malenia Elden Ring"  height="400px" width="400px" style="object-fit: cover;">
                 </div>
             </section>
         </article>
-        <audio controls><source src="/Voicy_i am malenia blade of miquella.mp3"></audio>
+        <audio controls><source src="Voicy_i am malenia blade of miquella.mp3"></audio>
     </main>
    
     <footer class="footer">
