--- a/TERAPI.HTML
+++ b/TERAPI.HTML
@@ -16,6 +16,8 @@
             <a href="./index.html">Inicio</a>
             <a href="./gameplay.html">Gameplay</a>
             <a href="./elmejorsouls.html">La Cúspide del Género</a>
+            <a href="./terapia.html">TERAPIA</a>
+
         </nav>
     </header>
 
