--- a/elmejorsouls.html
+++ b/elmejorsouls.html
@@ -16,6 +16,8 @@
             <a href="./terapia.html">Terapia?</a>
             <a href="./gameplay.html">gameplay</a>
             <a href="./index.html">Inicio</a>
+            <a href="./TERAPI.HTML">JAVASCRIPT</a>
+
         </nav>
     </header>
     <main class="main">
