--- a/gameplay.html
+++ b/gameplay.html
@@ -16,6 +16,8 @@
             <a href="./terapia.html">Terapia?</a>
             <a href="./index.html">inicio</a>
             <a href="./elmejorsouls.html">La Cuspide del Genero</a>
+            <a href="./TERAPI.HTML">JAVASCRIPT</a>
+
         </nav>
     </header>
     <main class="main">
