--- a/origen.html
+++ b/origen.html
@@ -15,6 +15,8 @@
             <a href="./terapia.html">Terapia?</a>
             <a href="./gameplay.html">gameplay</a>
             <a href="./elmejorsouls.html">La Cuspide del Genero</a>
+            <a href="./TERAPI.HTML">JAVASCRIPT</a>
+
         </nav>
     </header>
     <main class="main">
