--- a/terapia.html
+++ b/terapia.html
@@ -17,6 +17,8 @@
             <a href="./index.html">Inicio</a>
             <a href="./gameplay.html">gameplay</a>
             <a href="./elmejorsouls.html">La Cuspide del Genero</a>
+            <a href="./TERAPI.HTML">JAVASCRIPT</a>
+
         </nav>
     </header>
     <main class="main">
